Final edit for geekathon 14/10/24

--- a/front-end/Stylish/contact.css
+++ b/front-end/Stylish/contact.css
@@ -14,7 +14,7 @@
 }
 
 body {
-    background-image: url(/Assets/img/Contact\ bg.jpg);
+    background-image: url(../Assets/img/Contactbg.jpg);
     background-size: 100%;
 }
 
