--- a/front-end/Stylish/styles.css
+++ b/front-end/Stylish/styles.css
@@ -511,10 +511,13 @@ nav {
 }
 
 footer {
-    background-color: #ffffff;
-    color: #898989;
-    text-align: center;
-    font-size: 16px;
-    font-family: Montserrat;
-    width: 100%;
+  background-color: #ffffff;
+  color: #898989;
+  text-align: center;
+  font-size: 16px;
+  font-family: Montserrat;
+  width: 100%;
+  padding: 2%;
+  border-top: 2px solid;
+  margin-top: 2%;
 }
