--- a/front-end/Stylish/save.css
+++ b/front-end/Stylish/save.css
@@ -357,14 +357,14 @@ nav {
   .card .list:last-child .element:hover {
     background-color: rgba(56, 45, 71, 0.836);
   }
-  
+
 .icon-active {
     filter: invert(0%) sepia(0%) saturate(7500%) hue-rotate(360deg) brightness(0%) contrast(100%);
 }
 .separator .list .element a{
     text-decoration: none;
 }
-.card .list .element a {
+.card .list li.element a {
     text-decoration: none;
     color: #7e8590;
 }
